--- a/requirements.txt
+++ b/requirements.txt
@@ -101,7 +101,7 @@ pyparsing==3.1.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.4
-pywin32==311
+# pywin32==311
 pywinpty==2.0.12
 PyYAML==6.0.1
 pyzmq==25.1.2
@@ -150,3 +150,4 @@ widgetsnbextension==4.0.10
 zipp==3.17.0
 
 watchdog==4.0.0 
+
