--- a/requirements.txt
+++ b/requirements.txt
@@ -80,7 +80,7 @@ networkx==3.2.1
 notebook==7.1.0
 notebook_shim==0.2.4
 numpy==1.26.4
-opencv-python==4.9.0.80
+opencv-python-headless==4.9.0.80
 overrides==7.7.0
 packaging==23.2
 pandas==2.2.0
@@ -150,4 +150,5 @@ widgetsnbextension==4.0.10
 zipp==3.17.0
 
 watchdog==4.0.0 
+
 
